tests/errors/match-literal-type.ari
fn main() -> i64 {
  return match 2 {
    true => 1,
    _ => 0,
  };
}
